====================
2018/8/4 - 2018/8/5
v 5-0.44

- Fixed bug in Engine::run() that failed to return EngineResult::Done when at the end of the input stream.
- Fixed nasty bug in Scope that tried using temp variables to init the RefVariableStorage in the hash table.
- Changed RefVariableStorage management to allow sharing rather than copying. This also increases engine speed.


FileInStream
- atEOS() now checks the fail bits.
- getNextByte() now checks for the file being open.


====================
2018/4/26, 2018/7/18,19, 2018/8/2
v 5-0.43

- Added support for execute-with-alternative-super-variable ("xwsv").
- Bumped up COPPER_LANG_VERSION to 2.3 to reflect addition of execute-with-alternative-super function.
- Fixed typo in #ifdef in VarAddress::first().
- Changed CallbackWrapper run() to check against EngineResult::Error rather than EngineResult::Ok.
- Changed Scope to have settable initial size and set default to smaller. Stack frames use larger size. Sizes are #defines:
-- CU_FUNCTION_SCOPE_SIZE = 15
-- CU_STACK_FRAME_SCOPE_SIZE = 100
--- NOTE: The speed updates are incredible!
- Fixed duplicate definition of uint from RHHash.h competing with utilList.h
- Added util::List::operator[] for const settings.

EngineMsgToStr
- Updated with error messages for execute-width-alternative-super errors.

Added StringInStream
Added FileInStream

docs
- Updated
- Small fixes


====================
2018/4/7 - 2018/4/26
v 5-0.42

- Changed Opcode::ConditionalGoto case in Engine::operate() to return an error instead of treating it as false.
- Bumped up COPPER_LANG_VERSION to 2.2 to reflect change in if-statements.
- Fixed bug in Body::compile_internal that caused parsing to stop (stream completed before parsing) even for valid input without a statement ending.


====================
2018/3/13 - 2018/3/14
v 5-0.41

- Cleaned up utilList.h.